fix: fix dark mode

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -16,7 +16,3 @@ body {
 .height-52 {
   height: 54%;
 }
-
-.top-sec {
-  border-bottom: 1px solid #f8f8f8;
-}
